# ResearchOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.backend.overlay  README.md  alembic.ini  constraints.txt  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  researchos-server.spec
MinerU/: README.md
class/: README.md  ResearchOS-30课课程总纲.md  lesson-01-overview.md  lesson-02-repo-layout.md  lesson-03-tech-stack.md  lesson-04-local-startup.md  lesson-05-first-end-to-end-trace.md  lesson-06-fastapi-entrypoint.md  lesson-07-middleware-and-cross-cutting.md  lesson-08-router-layering.md  lesson-09-configuration-system.md  lesson-10-auth-and-permissions.md  lesson-11-storage-bootstrap.md  lesson-12-sqlalchemy-and-repositories.md  lesson-13-topic-and-paper-models.md  lesson-14-paper-ingest-pipeline.md  lesson-15-paper-processing-pipeline.md  lesson-16-rag-and-evidence.md  lesson-17-graph-and-insights.md  lesson-18-wiki-brief-writing.md  lesson-19-cost-performance-reliability.md  lesson-20-worker-and-scheduling.md  lesson-21-llm-client-unification.md  lesson-22-session-runtime.md  lesson-23-tools-skills-mcp.md  lesson-24-local-and-remote-workspace.md  lesson-25-project-workflows-and-aris.md  lesson-26-frontend-entry-and-routing.md  lesson-27-reading-agent-page.md  lesson-28-other-pages-and-api-layer.md  lesson-29-desktop-and-packaging.md  lesson-30-testing-and-roadmap.md
docs/: aris-feature-gap-matrix.md  aris-parity-implementation-plan.md  build-and-run-guide.md  database-data-chains.md  (+11 more)
(+350 files in other folders)
